--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -137,6 +137,27 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha4-awsmanagedcluster
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: default.awsmanagedcluster.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha4
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - awsmanagedclusters
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
       path: /mutate-infrastructure-cluster-x-k8s-io-v1alpha4-awsmanagedmachinepool
   failurePolicy: Fail
   matchPolicy: Equivalent
@@ -306,6 +327,27 @@ webhooks:
     - UPDATE
     resources:
     - awsmachinepools
+  sideEffects: None
+- admissionReviewVersions:
+  - v1beta1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-infrastructure-cluster-x-k8s-io-v1alpha4-awsmanagedcluster
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: validation.awsmanagedcluster.infrastructure.cluster.x-k8s.io
+  rules:
+  - apiGroups:
+    - infrastructure.cluster.x-k8s.io
+    apiVersions:
+    - v1alpha4
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - awsmanagedclusters
   sideEffects: None
 - admissionReviewVersions:
   - v1beta1
