--- a/test/e2e/data/infrastructure-aws/cluster-template-simple-multitenancy.yaml
+++ b/test/e2e/data/infrastructure-aws/cluster-template-simple-multitenancy.yaml
@@ -1,67 +1,43 @@
----
 apiVersion: cluster.x-k8s.io/v1alpha4
 kind: Cluster
 metadata:
-  name: "${CLUSTER_NAME}"
   labels:
-    cni: "${CLUSTER_NAME}-crs-0"
+    cni: ${CLUSTER_NAME}-crs-0
+  name: ${CLUSTER_NAME}
 spec:
   clusterNetwork:
     pods:
-      cidrBlocks: ["192.168.0.0/16"]
+      cidrBlocks:
+      - 192.168.0.0/16
+  controlPlaneRef:
+    apiVersion: controlplane.cluster.x-k8s.io/v1alpha4
+    kind: KubeadmControlPlane
+    name: ${CLUSTER_NAME}-control-plane
   infrastructureRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
     kind: AWSCluster
-    name: "${CLUSTER_NAME}"
-  controlPlaneRef:
-    kind: KubeadmControlPlane
-    apiVersion: controlplane.cluster.x-k8s.io/v1alpha4
-    name: "${CLUSTER_NAME}-control-plane"
+    name: ${CLUSTER_NAME}
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: AWSCluster
 metadata:
-  name: "${CLUSTER_NAME}"
+  name: ${CLUSTER_NAME}
 spec:
   identityRef:
     kind: AWSClusterRoleIdentity
-    name: "${MULTI_TENANCY_SIMPLE_IDENTITY_NAME}"
-  region: "${AWS_REGION}"
-  sshKeyName: "${AWS_SSH_KEY_NAME}"
+    name: ${MULTI_TENANCY_SIMPLE_IDENTITY_NAME}
   networkSpec:
     vpc:
       availabilityZoneUsageLimit: 1
+  region: ${AWS_REGION}
+  sshKeyName: ${AWS_SSH_KEY_NAME}
 ---
-apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
-kind: AWSClusterRoleIdentity
-metadata:
-  name: "${MULTI_TENANCY_SIMPLE_IDENTITY_NAME}"
-spec:
-  roleARN: "${MULTI_TENANCY_SIMPLE_ROLE_ARN}"
-  durationSeconds: 900
-  sessionName: "${MULTI_TENANCY_SIMPLE_IDENTITY_NAME}-session"
-  sourceIdentityRef:
-    kind: AWSClusterControllerIdentity
-    name: "default"
-  allowedNamespaces: {}
----
-kind: KubeadmControlPlane
 apiVersion: controlplane.cluster.x-k8s.io/v1alpha4
+kind: KubeadmControlPlane
 metadata:
-  name: "${CLUSTER_NAME}-control-plane"
+  name: ${CLUSTER_NAME}-control-plane
 spec:
-  replicas: ${CONTROL_PLANE_MACHINE_COUNT}
-  machineTemplate:
-    infrastructureRef:
-      kind: AWSMachineTemplate
-      apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
-      name: "${CLUSTER_NAME}-control-plane"
   kubeadmConfigSpec:
-    initConfiguration:
-      nodeRegistration:
-        name: '{{ ds.meta_data.local_hostname }}'
-        kubeletExtraArgs:
-          cloud-provider: aws
     clusterConfiguration:
       apiServer:
         extraArgs:
@@ -69,86 +45,110 @@ spec:
       controllerManager:
         extraArgs:
           cloud-provider: aws
-    joinConfiguration:
+    initConfiguration:
       nodeRegistration:
-        name: '{{ ds.meta_data.local_hostname }}'
         kubeletExtraArgs:
           cloud-provider: aws
-  version: "${KUBERNETES_VERSION}"
+        name: '{{ ds.meta_data.local_hostname }}'
+    joinConfiguration:
+      nodeRegistration:
+        kubeletExtraArgs:
+          cloud-provider: aws
+        name: '{{ ds.meta_data.local_hostname }}'
+  machineTemplate:
+    infrastructureRef:
+      apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
+      kind: AWSMachineTemplate
+      name: ${CLUSTER_NAME}-control-plane
+  replicas: ${CONTROL_PLANE_MACHINE_COUNT}
+  version: ${KUBERNETES_VERSION}
 ---
-kind: AWSMachineTemplate
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
+kind: AWSMachineTemplate
 metadata:
-  name: "${CLUSTER_NAME}-control-plane"
+  name: ${CLUSTER_NAME}-control-plane
 spec:
   template:
     spec:
-      instanceType: "${AWS_CONTROL_PLANE_MACHINE_TYPE}"
-      iamInstanceProfile: "control-plane.cluster-api-provider-aws.sigs.k8s.io"
-      sshKeyName: "${AWS_SSH_KEY_NAME}"
+      iamInstanceProfile: control-plane.cluster-api-provider-aws.sigs.k8s.io
+      instanceType: ${AWS_CONTROL_PLANE_MACHINE_TYPE}
+      sshKeyName: ${AWS_SSH_KEY_NAME}
 ---
 apiVersion: cluster.x-k8s.io/v1alpha4
 kind: MachineDeployment
 metadata:
-  name: "${CLUSTER_NAME}-md-0"
+  name: ${CLUSTER_NAME}-md-0
 spec:
-  clusterName: "${CLUSTER_NAME}"
+  clusterName: ${CLUSTER_NAME}
   replicas: ${WORKER_MACHINE_COUNT}
   selector:
-    matchLabels:
+    matchLabels: null
   template:
     spec:
-      clusterName: "${CLUSTER_NAME}"
-      version: "${KUBERNETES_VERSION}"
       bootstrap:
         configRef:
-          name: "${CLUSTER_NAME}-md-0"
           apiVersion: bootstrap.cluster.x-k8s.io/v1alpha4
           kind: KubeadmConfigTemplate
+          name: ${CLUSTER_NAME}-md-0
+      clusterName: ${CLUSTER_NAME}
       infrastructureRef:
-        name: "${CLUSTER_NAME}-md-0"
         apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
         kind: AWSMachineTemplate
+        name: ${CLUSTER_NAME}-md-0
+      version: ${KUBERNETES_VERSION}
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
 kind: AWSMachineTemplate
 metadata:
-  name: "${CLUSTER_NAME}-md-0"
+  name: ${CLUSTER_NAME}-md-0
 spec:
   template:
     spec:
-      instanceType: "${AWS_NODE_MACHINE_TYPE}"
-      iamInstanceProfile: "nodes.cluster-api-provider-aws.sigs.k8s.io"
-      sshKeyName: "${AWS_SSH_KEY_NAME}"
+      iamInstanceProfile: nodes.cluster-api-provider-aws.sigs.k8s.io
+      instanceType: ${AWS_NODE_MACHINE_TYPE}
+      sshKeyName: ${AWS_SSH_KEY_NAME}
 ---
 apiVersion: bootstrap.cluster.x-k8s.io/v1alpha4
 kind: KubeadmConfigTemplate
 metadata:
-  name: "${CLUSTER_NAME}-md-0"
+  name: ${CLUSTER_NAME}-md-0
 spec:
   template:
     spec:
       joinConfiguration:
         nodeRegistration:
-          name: '{{ ds.meta_data.local_hostname }}'
           kubeletExtraArgs:
             cloud-provider: aws
+          name: '{{ ds.meta_data.local_hostname }}'
 ---
 apiVersion: v1
+data: ${CNI_RESOURCES}
 kind: ConfigMap
 metadata:
-  name: "cni-${CLUSTER_NAME}-crs-0"
-data: ${CNI_RESOURCES}
+  name: cni-${CLUSTER_NAME}-crs-0
 ---
 apiVersion: addons.cluster.x-k8s.io/v1alpha4
 kind: ClusterResourceSet
 metadata:
-  name:  "${CLUSTER_NAME}-crs-0"
+  name: ${CLUSTER_NAME}-crs-0
 spec:
-  strategy: ApplyOnce
   clusterSelector:
     matchLabels:
-      cni: "${CLUSTER_NAME}-crs-0"
+      cni: ${CLUSTER_NAME}-crs-0
   resources:
-    - name: "cni-${CLUSTER_NAME}-crs-0"
-      kind: ConfigMap
+  - kind: ConfigMap
+    name: cni-${CLUSTER_NAME}-crs-0
+  strategy: ApplyOnce
+---
+apiVersion: infrastructure.cluster.x-k8s.io/v1alpha4
+kind: AWSClusterRoleIdentity
+metadata:
+  name: ${MULTI_TENANCY_SIMPLE_IDENTITY_NAME}
+spec:
+  allowedNamespaces: {}
+  durationSeconds: 900
+  roleARN: ${MULTI_TENANCY_SIMPLE_ROLE_ARN}
+  sessionName: ${MULTI_TENANCY_SIMPLE_IDENTITY_NAME}-session
+  sourceIdentityRef:
+    kind: AWSClusterControllerIdentity
+    name: default
