--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -305,7 +305,7 @@ webhooks:
     - CREATE
     - UPDATE
     resources:
-    - fargateprofiles
+    - awsfargateprofiles
   sideEffects: None
 - admissionReviewVersions:
   - v1beta1
