fix: node affinity rules in external CCM CRDs

--- a/test/e2e/data/infrastructure-aws/cluster-template-external-cloud-provider.yaml
+++ b/test/e2e/data/infrastructure-aws/cluster-template-external-cloud-provider.yaml
@@ -195,6 +195,20 @@ data:
               effect: NoSchedule
             - key: node-role.kubernetes.io/master
               effect: NoSchedule
+            - key: node-role.kubernetes.io/master
+                effect: NoSchedule
+            - effect: NoSchedule
+              key: node-role.kubernetes.io/control-plane
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                  - matchExpressions:
+                      - key: node-role.kubernetes.io/control-plane
+                        operator: Exists
+                  - matchExpressions:
+                      - key: node-role.kubernetes.io/master
+                        operator: Exists
           serviceAccountName: cloud-controller-manager
           containers:
             - name: aws-cloud-controller-manager
