Rename the ELB scheme from Internet-facing to internet-facing
According to AWS documentation, the scheme is lowercase. If the field is
explicitly set to Internet-facing, CAPA fails to recognize the ELB it
has created, because the ELB's scheme is lowercase, i.e.,
internet-facing.

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_awsclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_awsclusters.yaml
@@ -138,11 +138,11 @@ spec:
                       to false."
                     type: boolean
                   scheme:
-                    default: Internet-facing
+                    default: internet-facing
                     description: Scheme sets the scheme of the load balancer (defaults
-                      to Internet-facing)
+                      to internet-facing)
                     enum:
-                    - Internet-facing
+                    - internet-facing
                     - internal
                     type: string
                   subnets:
@@ -886,11 +886,11 @@ spec:
                       to false."
                     type: boolean
                   scheme:
-                    default: Internet-facing
+                    default: internet-facing
                     description: Scheme sets the scheme of the load balancer (defaults
-                      to Internet-facing)
+                      to internet-facing)
                     enum:
-                    - Internet-facing
+                    - internet-facing
                     - internal
                     type: string
                   subnets:
