--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_awsclustertemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_awsclustertemplates.yaml
@@ -126,11 +126,11 @@ spec:
                               \n Defaults to false."
                             type: boolean
                           scheme:
-                            default: Internet-facing
+                            default: internet-facing
                             description: Scheme sets the scheme of the load balancer
-                              (defaults to Internet-facing)
+                              (defaults to internet-facing)
                             enum:
-                            - Internet-facing
+                            - internet-facing
                             - internal
                             type: string
                           subnets:
